删除重复的主题按钮